--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,6 @@
 # Created by https://www.gitignore.io/api/visualstudiocode
 # Edit at https://www.gitignore.io/?templates=visualstudiocode
 
-### VisualStudioCode ###
-.vscode/*
-.vscode/settings.json
-.vscode/tasks.json
-.vscode/launch.json
-.vscode/extensions.json
-
 ### VisualStudioCode Patch ###
 # Ignore all local history of files
 .history
@@ -31,3 +24,5 @@
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
+
+__debug_bin
